--- a/_mockUp/src/jade/restaurant.jade
+++ b/_mockUp/src/jade/restaurant.jade
@@ -1,16 +1,16 @@
-// - blog.html
+// - restaurant.html
 
 extends includes/layout
 
-block title    
-    title Resto Rallye - Actualités
+block title
+    title Resto Rallye - Restaurant
 
 block header
     - var current = { second: 'html' }
     include includes/header.jade
 
 block content
-    p Page Blog
+    p Page Restaurant
 
 block footer
     include includes/footer.jade
