--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -17,8 +17,8 @@
     position absolute
     rem-fallback( width, 25px )
     rem-fallback( height, 25px )
-    background: url("images/sprite.png") -90px -10px
-    rem-fallback( top, 9px )
+    background: url("images/links/sprite.png") -90px -10px
+    rem-fallback( top, 10px )
     rem-fallback( right, 5px )
     border none
     rem-fallback( text-indent, -1000000px )
@@ -36,7 +36,7 @@
     position absolute
     rem-fallback( width, 25px )
     rem-fallback( height, 25px )
-    background: url("images/sprite.png") -120px -10px
+    background: url("images/links/sprite.png") -120px -10px
     rem-fallback( top, 10px )
     rem-fallback( right, 8px )
     border none
