--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -18,21 +18,93 @@
 // Parallax images
 // - main.jade
 .parallax__img--one
-    background: url("images/parallax/backgroundImage.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1920px )
+        background: url("images/parallax/1920x1080/backgroundImage.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1280px )
+        background: url("images/parallax/1280x800/backgroundImage.jpg") center fixed no-repeat
+    +media-query( screen, max-width 800px )
+        background: url("images/parallax/800x500/backgroundImage.jpg") center fixed no-repeat
+    +media-query( screen, max-width 400px )
+        background: url("images/parallax/400x200/backgroundImage.jpg") center fixed no-repeat
 .parallax__img--two
-    background: url("images/parallax/backgroundImage1.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage1.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1920px )
+        background: url("images/parallax/1920x1080/backgroundImage1.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1280px )
+        background: url("images/parallax/1280x800/backgroundImage1.jpg") center fixed no-repeat
+    +media-query( screen, max-width 800px )
+        background: url("images/parallax/800x500/backgroundImage1.jpg") center fixed no-repeat
+    +media-query( screen, max-width 400px )
+        background: url("images/parallax/400x200/backgroundImage1.jpg") center fixed no-repeat
 .parallax__img--three
-    background: url("images/parallax/backgroundImage2.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage2.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1920px )
+        background: url("images/parallax/1920x1080/backgroundImage2.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1280px )
+        background: url("images/parallax/1280x800/backgroundImage2.jpg") center fixed no-repeat
+    +media-query( screen, max-width 800px )
+        background: url("images/parallax/800x500/backgroundImage2.jpg") center fixed no-repeat
+    +media-query( screen, max-width 400px )
+        background: url("images/parallax/400x200/backgroundImage2.jpg") center fixed no-repeat
 .parallax__img--four
-    background: url("images/parallax/backgroundImage3.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage3.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1920px )
+        background: url("images/parallax/1920x1080/backgroundImage3.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1280px )
+        background: url("images/parallax/1280x800/backgroundImage3.jpg") center fixed no-repeat
+    +media-query( screen, max-width 800px )
+        background: url("images/parallax/800x500/backgroundImage3.jpg") center fixed no-repeat
+    +media-query( screen, max-width 400px )
+        background: url("images/parallax/400x200/backgroundImage3.jpg") center fixed no-repeat
 .parallax__img--five
-    background: url("images/parallax/backgroundImage4.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage4.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1920px )
+        background: url("images/parallax/1920x1080/backgroundImage4.jpg") center fixed no-repeat
+    +media-query( screen, max-width 1280px )
+        background: url("images/parallax/1280x800/backgroundImage4.jpg") center fixed no-repeat
+    +media-query( screen, max-width 800px )
+        background: url("images/parallax/800x500/backgroundImage4.jpg") center fixed no-repeat
+    +media-query( screen, max-width 400px )
+        background: url("images/parallax/400x200/backgroundImage4.jpg") center fixed no-repeat
 // - evenements.jade
 .parallax__img--six
-    background: url("images/parallax/backgroundImage5.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage5.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage5.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage5.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage5.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage5.jpg") center fixed no-repeat
 .parallax__img--seven
-    background: url("images/parallax/backgroundImage6.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage6.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage6.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage6.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage6.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage6.jpg") center fixed no-repeat
 .parallax__img--height
-    background: url("images/parallax/backgroundImage7.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage7.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage7.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage7.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage7.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage7.jpg") center fixed no-repeat
 .parallax__img--nine
-    background: url("images/parallax/backgroundImage8.jpg") center fixed no-repeat
+    background: url("images/parallax/2560x1707/backgroundImage8.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage8.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage8.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage8.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage8.jpg") center fixed no-repeat
