--- a/_mockUp/src/styl/ITCSS/objects/_objects.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/objects/_objects.parallax.styl
@@ -13,7 +13,7 @@
 // Parallax placements
 .parallax__img
     position relative
-    rem-fallback( min-height, 550px )
+    min-height 80vh
     &:before
         content ""
         position absolute
