--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -1,9 +1,17 @@
 // - index.html
 
+
 extends includes/layout
 
 block title
     title Resto Rallye - Accueil
+    
+block style
+    link(rel="stylesheet" href="css/main.css")
+
+block header
+    - var current = { main: 'index' }
+    include includes/header.jade
 
 block content
     div(itemscope itemtype="http://schema.org/Thing").parallax__img.parallax__img--one   
@@ -59,11 +67,14 @@ block content
         
         while numberItem < 3            
             div(itemscope itemtype="http://schema.org/FoodEstablishment").inline-block.thumbnails
-                a(itemprop="url" href="restaurant.html").removeLink
+                a(itemprop="url" href="html/restaurant.html").removeLink
                     h4(itemprop="brand").delta 
                         | Chez René, 
                         span(itemprop="location") Liège
-                    img(itemprop="image" src="../css/images/mockUp/exempleRest.jpg").thumbnails__img
+                    img(itemprop="image" src="css/images/mockUp/exempleRest.jpg").thumbnails__img
             - numberItem++
     
     div.parallax__img.parallax__img--five    
+
+block footer
+    include includes/footer.jade
