--- a/_mockUp/src/jade/restaurants.jade
+++ b/_mockUp/src/jade/restaurants.jade
@@ -1,9 +1,16 @@
-// - index.html
+// - restaurants.html
 
 extends includes/layout
 
 block title
-    title Resto Rallye - Accueil
+    title Resto Rallye - Restaurants
+
+block header
+    - var current = { second: 'html' }
+    include includes/header.jade
 
 block content
     p Page Restaurant
+
+block footer
+    include includes/footer.jade
