Add content for evenements.jade

--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -18,8 +18,8 @@ block content
                 span(itemprop="startDate") 21 Octobre 
                 | à 
                 span(itemprop="location") Seraing
-            p(itemprop="description") Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas eaque quia reiciendis voluptate atque minus maiores a in, nihil magnam. Iure molestias quos reiciendis ducimus magni magnam eos at quibusdam!
-            p(itemprop="description")  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit illo atque incidunt pariatur saepe reprehenderit recusandae omnis repellendus temporibus optio porro totam nesciunt, iusto placeat labore magni molestiae delectus quam.
+            p(itemprop="description") Pour la première fois dans l'historie de Resto-Rallye, nous organisons un évènement dans la ville de Seraing. Trois restaurants de la ville ont accepté de recevoir nos gastronomades et leurs faire découvrir les spécialités de leurs établissements.
+            p(itemprop="description") Que vous soyez habitué ou encore novice à ses évènements, nous vous invitons chaleureusement à nous rejoindre ce mardi 21 Octobre pour de nouvelle découverte gastronomique.
             p(itemprop="description") 
                 | Retrouver nous à 
                 span(itemprop="location").hightlight l'Église St Etienne
