--- a/_mockUp/src/jade/evenement.jade
+++ b/_mockUp/src/jade/evenement.jade
@@ -10,7 +10,19 @@ block header
     include includes/header.jade
 
 block content
-    p Page Restaurant
+    div#slideMap.parallax__img
+    div.parallax__body
+        p Description
+            
+    div.parallax__img.parallax__img--ten
+    div.parallax__body
+        p Restaurant
+    
+    div.parallax__img.parallax__img--eleven
+    div.parallax__body
+        p Galerie
+    
+    div.parallax__img.parallax__img--twelve
 
 block footer
     include includes/footer.jade
