--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -108,3 +108,34 @@
             background: url("images/parallax/800x500/backgroundImage8.jpg") center fixed no-repeat
         +media-query( screen, max-width 400px )
             background: url("images/parallax/400x200/backgroundImage8.jpg") center fixed no-repeat
+// - evenement.jade
+.parallax__img--ten
+    background: url("images/parallax/2560x1707/backgroundImage9.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage9.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage9.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage9.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage9.jpg") center fixed no-repeat
+.parallax__img--eleven
+    background: url("images/parallax/2560x1707/backgroundImage10.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage10.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage10.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage10.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage10.jpg") center fixed no-repeat
+.parallax__img--twelve
+    background: url("images/parallax/2560x1707/backgroundImage11.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage11.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage11.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage11.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage11.jpg") center fixed no-repeat
